fix: change profile widths and overflow

--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,10 +7,14 @@
   line-height: 17px;
   text-align: center;
   color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width:1000px) {
   .profile__subtitle {
+    max-width: 310px;
     font-size: 18px;
     line-height: 22px;
     margin: 0;
