--- a/blocks/profile/__wrap/profile__wrap.css
+++ b/blocks/profile/__wrap/profile__wrap.css
@@ -3,5 +3,4 @@
   flex-direction: row;
   align-items: baseline;
   position: relative;
-  width: 100%;
 }
