--- a/blocks/profile/__wrapper/profile__wrapper.css
+++ b/blocks/profile/__wrapper/profile__wrapper.css
@@ -4,7 +4,7 @@
 
 @media screen and (min-width:1000px) {
   .profile__wrapper {
-    max-width: 515px;
+    max-width: 415px;
     padding-left: 30px;
   }
 }
